--- a/website/www/Tutorial_Cluster_Part1.ipynb
+++ b/website/www/Tutorial_Cluster_Part1.ipynb
@@ -14,8 +14,6 @@
         "\n",
         "Since we have a brand-new cluster, it is a good time to improve your way of using it if you had always felt that your workflow was not optimal. This tutorial will help you to set up your personal environment if you use Python.\n",
         "\n",
-        "{{< downloadthis www/Tutorial_Cluster_Part1.ipynb dname=\"Tutorial_Cluster_Part1.ipynb\" label=\"Download this notebook\" >}}\n",
-        "\n",
         ":::{.callout-note}\n",
         "If you are working on the CRNL cluster, you can find also the corresponding notebook at this location: `/crnldata/projets_communs/tutorials/`\n",
         ":::\n",
@@ -69,7 +67,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "###### Import packages/modules\n",
         "import submitit\n",
@@ -79,13 +79,13 @@
         "import gc\n",
         "# import other modules\n",
         "import time"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "###### Define a function that should run on the cluster\n",
         "\n",
@@ -108,13 +108,13 @@
         "\n",
         "    # send the results back to the notebook\n",
         "    return results"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# check time and memory usage of your function\n",
         "# ideally, try to test it with the input values that will produce the biggest memory consumption \n",
@@ -125,13 +125,13 @@
         "print('Maximum memory usage (in MB): %s' % max(mem_usage))\n",
         "print('Maximum memory usage (in GB): %s' % (max(mem_usage)/1000))\n",
         "print('Time taken (in s): %s' % (end_time-start_time))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "#### Set some environment variables for our jobs\n",
         "### for some reason, some default values are set on the cluster, which do not match \n",
@@ -139,13 +139,13 @@
         "import os\n",
         "os.environ['SLURM_CPUS_PER_TASK'] = '1'\n",
         "os.environ['SLURM_TRES_PER_TASK'] = os.environ['SLURM_CPUS_PER_TASK']"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "#### define some array for which each item will be associated with an independent job on the cluster\n",
         "#### when you execute these cells, the jobs are sent to the cluster \n",
@@ -239,9 +239,7 @@
         "  finished_results = [finished_list[finished_order[i]].result() for i in finished_order]\n",
         "  print('Concatenated results obtained by applying yourFunction() to all items in array_parallel:')\n",
         "  print(finished_results)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -259,17 +257,15 @@
         "\n",
         "## Comments, questions?\n",
         "\n",
-        "Feel free to comment below to signal a bug, ask a question, etc.\n",
-        "\n",
-        "{{< include _comment_box.qmd >}}"
+        "Feel free to comment below to signal a bug, ask a question, etc."
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "name": "python3",
-      "language": "python",
       "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3",
       "path": "C:\\Users\\romai\\AppData\\Roaming\\Python\\share\\jupyter\\kernels\\python3"
     }
   },
