--- a/website/www/Tutorial_Cluster_Part2.ipynb
+++ b/website/www/Tutorial_Cluster_Part2.ipynb
@@ -13,8 +13,6 @@
         "author: Romain Ligneul\n",
         "---\n",
         "\n",
-        "{{< downloadthis www/Tutorial_Cluster_Part2.ipynb dname=\"Tutorial_Cluster_Part2.ipynb\" label=\"Download this notebook\" >}}\n",
-        "\n",
         ":::{.callout-note}\n",
         "If you are working on the CRNL cluster, you can find also the corresponding notebook at this location: `/crnldata/projets_communs/tutorials/`\n",
         ":::\n",
@@ -47,7 +45,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "###### simple memory/time check\n",
         "from memory_profiler import memory_usage\n",
@@ -82,9 +82,7 @@
         "print('Time taken (in s): %s' % (end_time-start_time))\n",
         "\n",
         "print('Do you notice the difference in time and memory due to the change in duplication size?')"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -100,6 +98,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "editable": true,
         "slideshow": {
@@ -107,6 +106,7 @@
         },
         "tags": []
       },
+      "outputs": [],
       "source": [
         "import os \n",
         "import submitit\n",
@@ -148,9 +148,7 @@
         "        njobs_finished=njobs_finished+1\n",
         "\n",
         "print('### Do you think that increasing the number of CPUs made a big difference? ###')\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -161,7 +159,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import time\n",
@@ -221,9 +221,7 @@
         "        njobs_finished=njobs_finished+1\n",
         "\n",
         "print('\\n### Do you think that increasing the number of CPUs made a big difference? ###')"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -241,7 +239,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# check node and CPU information\n",
         "print(\"### Node counts: \\nA: currently in use \\B available\")\n",
@@ -252,9 +252,7 @@
         "# check some stats of our last job\n",
         "print('### CPU time and MaxRSS of our last job (about 1000Mb should be added to your MaxRSS (Mb) in order to cover safely the memory needs of the python runtime)###')\n",
         "os.system(f'sacct -j {job.job_id} --format=\"CPUTime,MaxRSS\"')"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -270,7 +268,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "import asyncio\n",
         "\n",
@@ -310,9 +310,7 @@
         "# it essential do something similar to what we were doing after \n",
         "# \"# wait for job completion\", but in a much more compact way\n",
         "# however, the reordering of outputs wrt to inputs is not implemented"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -329,7 +327,9 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "# write in job_output within our directory\n",
         "job_output_folder=os.getcwd()+'/tuto_output/'\n",
@@ -373,9 +373,7 @@
         "# wait a little and kill manually the kernel process\n",
         "time.sleep(3)\n",
         "os.system('kill ' + str(os.getpid()))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -393,17 +391,15 @@
         "\n",
         "## Comments, questions?\n",
         "\n",
-        "Feel free to comment, ask questions or report bugs below.\n",
-        "\n",
-        "{{< include _comment_box.qmd >}}"
+        "Feel free to comment, ask questions or report bugs below.\n"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "name": "python3",
-      "language": "python",
       "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3",
       "path": "C:\\Users\\romai\\AppData\\Roaming\\Python\\share\\jupyter\\kernels\\python3"
     }
   },
